
Changelog
=========

4.3.1 (unreleased)
------------------

- CSRF: always allow object annotations to be written.
  [jone, deiferni]

- Fix icons for the treeporlet favorite functionality.
  [phgross]

- Made DeactivatedFKConstraint compatible with newer alembic versions.
  [phgross]

- Fix submitting proposals that reference mails.
  [deiferni]

- Meeting: add editing protocols, creating/downloading/updating protocol documents.
  [deiferni]

- Examplecontent profile: Add french to the supported language.
  [phgross]

- Customize LanguageSelector viewlet to display it as a menu.
  [phgross]

- Fixed actor for all task activities.
  [phgross]

- Add initial notification support:

  - Added NotificationCenter including SQL representations for activitities, notifications, resource and watchers.
  - Added a feature flag to disable/enable notifications
  - Added notification viewlet which contains a badge icon and lists unread notifications
  - Added notifications overview with a MyNotification tab
  - Add mail notification dispatcher.

  [phgross]

- Implement migrating participants in DossierMigrator.
  [lgraf]

- Add DictstorageMigrator that migrates user IDs in dictstorage keys (in SQL).
  (to be used with ftw.usermigration).
  [lgraf]

- Add OGDSMigrator that migrates users and inbox groups in OGDS SQL tables
  (to be used with ftw.usermigration).
  [lgraf]

- Do not show resolved tasks as overdue.
  [phgross]

- Add DossierMigrator that migrates dossier responsibles (to be used
  with ftw.usermigration).
  [lgraf]

- Meeting: disable navigation portlet for commitee-container when installing
  example profile.
  [deiferni]

- Meeting: only allow documents in dossiers to be submitted as additional documents.
  [deiferni]

- Meeting: add missing translations for meeting/membership add menu.
  [deiferni]

- Meeting: add missing translations for submitting additional documents.
  [deiferni]

- Meeting: don't allow overlapping committee-memberships.
  [deiferni]
